test: add unit and integration tests for createMission methods