@@ -1,8 +1,10 @@
 package com.konoha.NinjaMissionManager.services;
 
 import com.konoha.NinjaMissionManager.dtos.mission.MissionMapper;
+import com.konoha.NinjaMissionManager.dtos.mission.MissionRequest;
 import com.konoha.NinjaMissionManager.dtos.mission.MissionResponse;
 import com.konoha.NinjaMissionManager.dtos.mission.MissionSummaryResponse;
+import com.konoha.NinjaMissionManager.exceptions.ResourceConflictException;
 import com.konoha.NinjaMissionManager.exceptions.ResourceNotFoundException;
 import com.konoha.NinjaMissionManager.models.*;
 import com.konoha.NinjaMissionManager.repositories.MissionRepository;
@@ -52,18 +54,21 @@ public class MissionServiceTest {
     private Ninja kage;
     private Mission missionA;
     private Mission missionB;
+    private MissionRequest missionRequest;
     private MissionResponse missionAResponse;
     private MissionSummaryResponse missionASummaryResponse;
+
 
     @BeforeEach
     void setUp() {
         naruto = new Ninja(1L, "Naruto Uzumaki", "naruto@gmail.com", "Naruto12345.", Rank.GENIN, new Village(), 0, false, Set.of(Role.ROLE_NINJA_USER), Collections.emptySet());
-        sasuke = new Ninja(2L, "Sasuke Uchiha", "sasuke@gmail.com", "Sasuke12345.", Rank.GENIN, new Village(), 0, false, Set.of(Role.ROLE_NINJA_USER), Collections.emptySet());
+        sasuke = new Ninja(2L, "Sasuke Uchiha", "sasuke@gmail.com", "Sasuke12345.", Rank.JONIN, new Village(), 0, false, Set.of(Role.ROLE_NINJA_USER), Collections.emptySet());
         kage = new Ninja(3L, "Tsunade Senju", "tsunade@gmail.com", "Tsunade12345.", Rank.KAGE, new Village(), 0, false, Set.of(Role.ROLE_KAGE), Collections.emptySet());
 
         missionA = new Mission(1L, "Misión de limpieza", "Limpia la propiedad del señor feudal", 50, MissionDifficulty.D, Status.COMPLETED, LocalDateTime.now(), Set.of(naruto, sasuke));
-        missionB = new Mission(2L, "Captura del Jinchuriki", "Capturar a Killer B", 5000, MissionDifficulty.A, Status.COMPLETED, LocalDateTime.now(), Set.of());
+        missionB = new Mission(2L, "Captura del Jinchuriki", "Capturar a Killer B", 5000, MissionDifficulty.A, Status.COMPLETED, LocalDateTime.of(2025, 8, 24, 10, 0), Collections.emptySet());
 
+        missionRequest = new MissionRequest("Misión de protección", "Proteger al señor feudal", 500, MissionDifficulty.B, Set.of(naruto.getId()));
         missionAResponse = new MissionResponse(1L,"Misión de limpieza","Limpia la propiedad del señor feudal", 50, MissionDifficulty.D, Status.COMPLETED, LocalDateTime.now(), Collections.emptySet());
         missionASummaryResponse = new MissionSummaryResponse(1L,"Misión de limpieza", MissionDifficulty.D, Status.COMPLETED);
 
@@ -202,6 +207,92 @@ public class MissionServiceTest {
 
             verify(missionRepository).findById(missionB.getId());
             verifyNoInteractions(missionMapper);
+        }
+    }
+
+    @Nested
+    @DisplayName("createMission")
+    class CreateMissionTests {
+
+        @Test
+        @DisplayName("Should create a mission successfully as a Kage")
+        void shouldCreateMissionAsKage() {
+            when(ninjaService.getAuthenticatedNinja(principal)).thenReturn(kage);
+            when(missionRepository.existsByTitle(anyString())).thenReturn(false);
+            when(ninjaService.getNinjaEntityById(naruto.getId())).thenReturn(naruto);
+            when(missionRepository.save(any(Mission.class))).thenReturn(missionA);
+            when(missionMapper.entityToDto(any(Mission.class))).thenReturn(missionAResponse);
+
+            MissionResponse result = missionService.createMission(missionRequest, principal);
+
+            assertThat(result).isEqualTo(missionAResponse);
+            verify(ninjaService).getAuthenticatedNinja(principal);
+            verify(missionRepository).existsByTitle(missionRequest.title());
+            verify(ninjaService).getNinjaEntityById(naruto.getId());
+            verify(missionRepository).save(any(Mission.class));
+            verify(missionMapper).entityToDto(any(Mission.class));
+        }
+
+        @Test
+        @DisplayName("Should throw AccessDeniedException for a non-Kage ninja")
+        void shouldThrowAccessDeniedForNonKage() {
+            when(ninjaService.getAuthenticatedNinja(principal)).thenReturn(naruto);
+
+            assertThatThrownBy(() -> missionService.createMission(missionRequest, principal))
+                    .isInstanceOf(AccessDeniedException.class)
+                    .hasMessageContaining("Only a Kage can create or manage missions.");
+
+            verify(ninjaService).getAuthenticatedNinja(principal);
+            verify(missionRepository, never()).existsByTitle(anyString());
+        }
+
+        @Test
+        @DisplayName("Should throw ResourceConflictException for a duplicate title")
+        void shouldThrowConflictForDuplicateTitle() {
+            when(ninjaService.getAuthenticatedNinja(principal)).thenReturn(kage);
+            when(missionRepository.existsByTitle(anyString())).thenReturn(true);
+
+            assertThatThrownBy(() -> missionService.createMission(missionRequest, principal))
+                    .isInstanceOf(ResourceConflictException.class)
+                    .hasMessageContaining("Mission with this title already exists.");
+
+            verify(ninjaService).getAuthenticatedNinja(principal);
+            verify(missionRepository).existsByTitle(missionRequest.title());
+        }
+
+        @Test
+        @DisplayName("Should throw ResourceNotFoundException for a non-existent ninja ID")
+        void shouldThrowNotFoundForNonExistentNinja() {
+            MissionRequest badRequest = new MissionRequest("Misión de entrenamiento", "Entrenamiento de combate", 50, MissionDifficulty.D, Set.of(999L));
+
+            when(ninjaService.getAuthenticatedNinja(principal)).thenReturn(kage);
+            when(missionRepository.existsByTitle(anyString())).thenReturn(false);
+            when(ninjaService.getNinjaEntityById(999L)).thenThrow(new ResourceNotFoundException("Ninja not found with ID: 999"));
+
+            assertThatThrownBy(() -> missionService.createMission(badRequest, principal))
+                    .isInstanceOf(ResourceNotFoundException.class)
+                    .hasMessageContaining("Ninja not found with ID: 999");
+
+            verify(ninjaService).getAuthenticatedNinja(principal);
+            verify(missionRepository).existsByTitle(badRequest.title());
+        }
+
+        @Test
+        @DisplayName("Should throw AccessDeniedException for a high-rank mission without a Jonin or higher ninja")
+        void shouldThrowAccessDeniedForHighRankMission() {
+            MissionRequest highRankRequest = new MissionRequest("Misión S", "Misión de alto rango", 5000, MissionDifficulty.S, Set.of(naruto.getId()));
+
+            when(ninjaService.getAuthenticatedNinja(principal)).thenReturn(kage);
+            when(missionRepository.existsByTitle(anyString())).thenReturn(false);
+            when(ninjaService.getNinjaEntityById(naruto.getId())).thenReturn(naruto);
+
+            assertThatThrownBy(() -> missionService.createMission(highRankRequest, principal))
+                    .isInstanceOf(AccessDeniedException.class)
+                    .hasMessageContaining("High-rank missions must be assigned to at least one Jonin or higher-rank ninja.");
+
+            verify(ninjaService).getAuthenticatedNinja(principal);
+            verify(missionRepository).existsByTitle(highRankRequest.title());
+            verify(ninjaService).getNinjaEntityById(naruto.getId());
         }
     }
 }
